--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "pdfjs-dist": "3.11.174",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.2.1",
         "react-moveable": "^0.30.3",
         "react-selecto": "^1.12.0",
         "typescript": "^5.4.5"
