--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
         "@scena/react-guides": "^0.16.0",
         "add": "^2.0.6",
         "antd": "^5.9.4",
-        "axios": "^1.6.4",
+        "axios": "^1.7.2",
         "form-render": "^2.2.16",
         "hotkeys-js": "^3.8.7",
         "html2canvas": "^1.4.1",
         "html2canvas-pro": "^1.5.0",
+        "moment": "^2.30.1",
         "pdfjs-dist": "3.11.174",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
