--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mpdf/mpdf": "^6.1",
+        "myfatoorah/laravel-package": "^2.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
