--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,21 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "elibyy/tcpdf-laravel": "^11.1",
+        "guzzlehttp/guzzle": "^7.8",
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mpdf/mpdf": "^6.1",
         "myfatoorah/laravel-package": "^2.2",
+        "setasign/fpdf": "*",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
