--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "pdfjs-dist": "3.11.174",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-drag-drop-files": "^2.3.10",
         "react-icons": "^5.2.1",
         "react-moveable": "^0.30.3",
         "react-selecto": "^1.12.0",
+        "react-toastify": "^10.0.5",
         "recharts": "^2.12.7",
         "typescript": "^5.4.5"
     },
