--- a/services/sign-pdf/package.json
+++ b/services/sign-pdf/package.json
@@ -14,9 +14,11 @@
         "@signpdf/placeholder-pdf-lib": "^3.2.4",
         "@signpdf/signer-p12": "^3.2.4",
         "@signpdf/signpdf": "^3.2.4",
+        "cors": "^2.8.5",
         "express": "^4.19.2",
         "multer": "^1.4.5-lts.1",
-        "pdf-lib": "^1.17.1"
+        "pdf-lib": "^1.17.1",
+        "socket.io": "^4.7.5"
     },
     "devDependencies": {
         "nodemon": "^3.1.4"
