--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "@tabler/icons-vue": "^3.11.0",
         "axios": "^1.7.2",
         "canvas-confetti": "^1.9.3",
+        "i18next": "^23.12.2",
+        "i18next-browser-languagedetector": "^8.0.0",
+        "i18next-http-backend": "^2.5.2",
         "mathjs": "^13.0.3",
         "moment": "^2.30.1",
         "pdf-lib": "1.17.1",
@@ -17,6 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-drag-drop-files": "^2.3.10",
+        "react-i18next": "^15.0.1",
         "react-icons": "^5.2.1",
         "react-toastify": "^10.0.5",
         "recharts": "^2.12.7",
