--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "myfatoorah/laravel-package": "^2.2",
+        "phpmailer/phpmailer": "^6.9",
         "setasign/fpdf": "*",
         "srmklive/paypal": "~3.0",
         "tightenco/ziggy": "^2.0"
