--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "@tabler/icons-vue": "^3.11.0",
         "axios": "^1.7.2",
         "canvas-confetti": "^1.9.3",
+        "html2canvas": "^1.4.1",
+        "html2canvas-pro": "^1.5.8",
+        "html2pdf.js": "^0.10.2",
         "i18next": "^23.12.2",
         "i18next-browser-languagedetector": "^8.0.0",
         "i18next-http-backend": "^2.5.2",
